- [#3766] In the events CSV file, place not formatted correctly
- [#3735] Error 102 when saving a registration record in backend
- [#3779] Typo in the Event Model: "Boad"
- [#3595] Internet Explorer shows border around radio button on registration page, patch by Thomas Biesenbach
- [#3718] CSV file displayed in the browser or saved with php suffix, original patch by Joern Dost

Changes:
- [#5260] Reduce the fields for the full-text search
- [#5259] Drop the Usage of TemplateHelper::setCss
- [#5254] Document the Prototype/jQuery clash
- [#5228] Convert the manual to ReST
- [#5221] Require oelib 0.8.0
- [#5176] Update maximum PHP version to 5.6
- [#5072] Switch the BE module to the module dispatcher
- [#4938] Use labels for all billing address fields on the confirmation page
- [#4220] Change tx_seminars_pi1_registrationEditor::getSeminar from private to protected
- [#4364] Drop the accreditation number from the registration form heading
- [#4817] Drop the new prices
- [#4818] Drop the ExtJS back-end module
- [#4661] Sort speakers, places, organizers, etc. by title in the backend
- [#4497] Adapt the German label for the submit button to § 312g Abs. 3 BGB
- [#4352] Require PHP 5.3
- [#4140] Require TYPO3 4.5
- [#4333] Use the new models in the countdown
- [#4335] Use the new models in the event headline
- [#3987] Require TYPO3 4.4
- [#3889] Disable the CSV export button in the events menu if there are no registrations for that event
- [#4116] Drop the option for the manual sorting of event records in the BE
- [#3901] The AJAX module needs to check the BE user rights
- [#4115] Cache the locallang labels in a JavaScript file
- [#3917] Use the PID from the BE user groups when creating new records
- [#4008] Use the single view link builder class in the FE and BE
- [#4009] The OldModels should provide the Mapper with the data to reduce double DB requests
- [#4007] Provide the new event model in places where single view links get created