@@ -60,7 +60,7 @@
 <!-- ###LISTHEADER_WRAPPER_LIST_REGISTRATIONS### -->
 <!-- ###LISTHEADER_WRAPPER_STATUS### -->      <th scope="col" class="tx-seminars-pi1-status">###HEADER_STATUS###</th>
 <!-- ###LISTHEADER_WRAPPER_STATUS### -->
-<!-- ###LISTHEADER_WRAPPER_EDIT### -->      <th scope="col" class="tx-seminars-pi1-edit">###HEADER_EDIT###</th>
+<!-- ###LISTHEADER_WRAPPER_EDIT### -->      <th scope="col" class="tx-seminars-pi1-edit">###LABEL_ACTIONS###</th>
 <!-- ###LISTHEADER_WRAPPER_EDIT### -->
 <!-- ###LISTHEADER_WRAPPER_REGISTRATIONS### -->
 				<th scope="col">###HEADER_REGISTRATIONS###</th>
