@@ -230,6 +230,7 @@ Bug fixes:
 - [#3718] CSV file displayed in the browser or saved with php suffix, original patch by Joern Dost
 
 Changes:
+- [#5363] Heading "actions" for the FE-edited events list
 - [#5260] Reduce the fields for the full-text search
 - [#5259] Drop the Usage of TemplateHelper::setCss
 - [#5254] Document the Prototype/jQuery clash
